live-magic (1.0) unstable; urgency=low

  * 1.0 release for Lenny.
  * Set default distribution to Lenny.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Sat, 09 Aug 2008 02:41:53 +0100

live-magic (0.7) unstable; urgency=low

  * Add d-i integration step which sets LH_DEBIAN_INSTALLER="live"
    (Closes: #492082)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Thu, 24 Jul 2008 19:42:35 +0100

live-magic (0.6) unstable; urgency=medium

  * Remove "--preserve-env" when calling gksu. Contrary to #490134, the
    "--preserve-env" switch actually works on some systems, but I don't think
    we need it as we pass the environment variables we are interested in
    manually. (Closes: #491242)

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 18 Jul 2008 13:49:31 +0100

live-magic (0.5) unstable; urgency=low

  * Remove python-gnome2-desktop from Recommends (Closes: #491248)
  * Update package description.

 -- Chris Lamb <chris@chris-lamb.co.uk>  Fri, 18 Jul 2008 00:56:49 +0100

live-magic (0.4) unstable; urgency=low

  * Move to native package.
  * debian/control:
    - Add Depends: on gksu (Closes: #476071)
    - Update package description.
    - Bump live-helper dependency to >> 1.0~a48.
    - Bump Standards-Version to 3.8.0.
  * Temporarily remove non-wizard section; it is buggy and out of date.
    (Closes: #440281)
  * Use LIVE_ not LH_ (Closes: #443124)
  * Completely rework build window; ensure proper status handling and
    cleanup after build. (Closes: #454415)
  * Set 'usb-hdd' option properly. (Closes: #478746)
  * Don't segfault when DISPLAY is not set. Thanks to W. Martin Borgert
    (debacle@debian.org>) for the patch. (Closes: #489904)
  * Show version when called with '--version'. Thanks to W. Martin Borgert
    (debacle@debian.org>) for the patch. (Closes: #450782)
  * Add .desktop file. Thanks to Paul Wise <pabs@debian.org> for the patch.
    (Closes: #450679)
  * Move to GPL v3.
  * Prefer cebootstrap in some sitatuions and add to Recommends.